// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - liquidate calculates liquidation correctly 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 107267,
}
`;

exports[`EthVault - liquidate can liquidate 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 109928,
}
`;
